--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-theme.css">
   <title>Мой сайт – Чумной Доктор</title>
 </head>
 <body class="page">
@@ -11,7 +11,8 @@
     <div class="container">
       <h1 class="page-title">Мой сайт</h1>
       <p><i>По всем вопросам пишите:</i><br><a href="mailto:plague_doctor@gmail.com">plague_doctor@gmail.com</a></p>
-    </div>
+    <button class="theme-button" type="button">Изменить тему</button>
+</div>
   </header>
   <main>
     <section class="about container">
@@ -40,5 +41,6 @@
       <p>2021</p>
     </div>
   </footer>
+<script src="script.js"></script>
 </body>
 </html>
