--- a/lab6/index.html
+++ b/lab6/index.html
@@ -9,7 +9,11 @@
 
   <body>
     <header class="page-header">
-      <div class="container">Контакты в шапке</div>
+      <div class="container">
+        <a class="header-phone" href =tel:+78005553535 >тел. 88005553535</a>
+        <a class ="header-email" href =mailto strelok024@gmail.com>email: strelok024@gmail.com </a>
+
+      </div>
       
     </header>
 
@@ -20,6 +24,9 @@
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="img/avat.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -29,15 +36,21 @@
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
 
-      <h3>Магазин товаров для дома</h3>
+      <h3>Сайт-визитка</h3>
       <p>Мой первый сайт.</p>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт-визитка">
+      </figure>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </section>
 
     <footer class="page-footer">
-      Контакты в подвале
-    </footer>
-  </body>
+              <div class="container">
+          <a class="header-phone" href =tel:+78005553535 >тел. 88005553535</a>
+          <a class ="header-email" href =mailto strelok024@gmail.com>email: strelok024@gmail.com </a>
+        </div>
+    </footer> 
+   </body>
 </html>
