--- a/lab7/index.html
+++ b/lab7/index.html
@@ -12,20 +12,19 @@
       <div class="container">
         <a class="header-phone" href =tel:+78005553535 >тел. 88005553535</a>
         <a class ="header-email" href =mailto strelok024@gmail.com>email: strelok024@gmail.com </a>
-
       </div>
       
     </header>
-
+  <div class="container">
     <section class="hero-image">
       <h1 class="heading">Неопознанный Енот</h1>
       <p>Junior верстальщик</p>
     </section>
-
+  
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img src="img/avat.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+        <img src="files/avat.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
       </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
@@ -41,10 +40,10 @@
       <dd class="level"><div style="width: 40%;">40%</div></dd>
   </dl>
 </div>
-
     </section>
 
     <section class="portfolio">
+      <div class="container">
       <h2 class="subheading">Мои работы</h2>
 
       <h3>Сайт-визитка</h3>
@@ -54,7 +53,7 @@
       </figure>
       <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+      <p>Статический блог про обучение HTML и CSS.</p></div>
     </section>
 
     <footer class="page-footer">
