--- a/lab7/index.html
+++ b/lab7/index.html
@@ -24,7 +24,7 @@
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img src="files/avat.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+        <img src="files/avat.jpg" width="1000" height="700" alt="Фотография Неопознанного Енота">
       </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
@@ -41,11 +41,9 @@
   </dl>
 </div>
     </section>
-
+    <div class="container">
     <section class="portfolio">
-      <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
       <h3>Сайт-визитка</h3>
       <p>Мой первый сайт.</p>
       <figure class="project-image">
@@ -53,14 +51,12 @@
       </figure>
       <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p></div>
-    </section>
-
+      <p>Статический блог про обучение HTML и CSS.</p>
+    </section></div>
+    <div class="container">
     <footer class="page-footer">
-              <div class="container">
           <a class="header-phone" href =tel:+78005553535 >тел. 88005553535</a>
           <a class ="header-email" href =mailto strelok024@gmail.com>email: strelok024@gmail.com </a>
-        </div>
-    </footer> 
+    </footer>  </div>
    </body>
 </html>
