--- a/lab7/index.html
+++ b/lab7/index.html
@@ -13,7 +13,6 @@
         <a class="header-phone" href =tel:+78005553535 >тел. 88005553535</a>
         <a class ="header-email" href =mailto strelok024@gmail.com>email: strelok024@gmail.com </a>
       </div>
-      
     </header>
   <div class="container">
     <section class="hero-image">
@@ -47,16 +46,17 @@
       <h3>Сайт-визитка</h3>
       <p>Мой первый сайт.</p>
       <figure class="project-image">
-        <img src="files/project.jpg" width="928" height="536" alt="Cайт-визитка">
+        <img src="files/project.jpg" width="920" height="536" alt="Cайт-визитка">
       </figure>
       <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </section></div>
-    <div class="container">
     <footer class="page-footer">
-          <a class="header-phone" href =tel:+78005553535 >тел. 88005553535</a>
-          <a class ="header-email" href =mailto strelok024@gmail.com>email: strelok024@gmail.com </a>
-    </footer>  </div>
+      <div class="container">
+        <a class ="header-email" href ="mailto strelok024@gmail.com">email: strelok024@gmail.com </a>
+        <a class="header-phone" href ="tel:+78005553535" >тел. 88005553535</a> 
+      </div>
+    </footer>  
    </body>
 </html>
