7 лабораторная подвал испавлен

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -14,13 +14,15 @@
         <a class ="header-email" href =mailto strelok024@gmail.com>email: strelok024@gmail.com </a>
       </div>
     </header>
-  <div class="container">
+  
     <section class="hero-image">
+      <div class="container">
       <h1 class="heading">Неопознанный Енот</h1>
-      <p>Junior верстальщик</p>
+      <p>Junior верстальщик</p></div>
     </section>
   
     <section class="intro">
+      <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
         <img src="files/avat.jpg" width="1000" height="700" alt="Фотография Неопознанного Енота">
@@ -38,9 +40,10 @@
       <dt class="skill-css">CSS</dt>
       <dd class="level"><div style="width: 40%;">40%</div></dd>
   </dl>
-</div>
+</div></div>
     </section>
     <section class="portfolio">
+      <div class="container">
       <h2 class="subheading">Мои работы</h2>
       <h3>Сайт-визитка</h3>
       <p>Мой первый сайт.</p>
@@ -49,8 +52,8 @@
       </figure>
       <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
-    </section></div>
+      <p>Статический блог про обучение HTML и CSS.</p></div>
+    </section>
     <footer class="page-footer">
       <div class="container">
         <a class ="header-email" href ="mailto strelok024@gmail.com">email: strelok024@gmail.com </a>
