--- a/lab8/index.html
+++ b/lab8/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a class="header-phone" href =+78005553535 >88005553535</a>
+        <a class="header-phone" href ="tel:+78005553535" >88005553535</a>
         <a class ="header-email" href ="mailto:strelok024@gmail.com"> strelok024@gmail.com</a>
       </div>
     </header>
@@ -61,8 +61,8 @@
     </section>
     <footer class="page-footer">
       <div class="container">
-        <a class ="header-email" href ="mailto:[strelok024@gmail.com]">strelok024@gmail.com</a>
-        <a class="header-phone" href ="+78005553535" >88005553535</a> 
+        <a class ="header-email" href ="mailto:strelok024@gmail.com">strelok024@gmail.com</a>
+        <a class="header-phone" href ="tel:+78005553535" >88005553535</a> 
       </div>
     </footer>  
    </body>
